apps/production/media/radarr/stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: radarr
spec:
  serviceName: radarr
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
        - name: radarr
          image: artifactory.local.hejsan.xyz/docker/linuxserver/radarr:5.21.0-nightly@sha256:86c8bc13a7a56792cee0903dd9bd0bdd8bab2d70c1b171eb972807046a85736e
          ports:
            - containerPort: 7878
              name: http
          volumeMounts:
            - name: radarr-config-pvc
              mountPath: /config
            - name: shared-storage
              mountPath: /mnt/storage
          resources:
            limits:
              memory: 900Mi
              cpu: "1"
            requests:
              memory: 500Mi
              cpu: "0.5"
      volumes:
        - name: shared-storage
          persistentVolumeClaim:
            claimName: shared-nfs-pvc
  volumeClaimTemplates:
    - metadata:
        name: radarr-config-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn
        resources:
          requests:
            storage: 20Gi
